--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,13 +6,15 @@ environment:
   sdk: '>=3.4.3 <4.0.0'
 
 dependencies: 
-  cupertino_icons: ^1.0.6
-  get: 4.7.2
+  cupertino_icons: ^1.0.2
+  get: any
   flutter: 
+    sdk: flutter
+  flutter_web_plugins:
     sdk: flutter
 
 dev_dependencies: 
-  flutter_lints: ^3.0.0
+  flutter_lints: ^2.0.0
   flutter_test: 
     sdk: flutter
 
