--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
+  url_strategy: ^0.2.0
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
